--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint --project tsconfig.json",
-    "lint-fix": "tslint --project tsconfig.json --fix"
+    "lint-fix": "tslint --project tsconfig.json --fix",
+    "start": "npm run lint && npm run compile && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,12 @@
     "url": "https://github.com/KinesisNetwork/node-manager/issues"
   },
   "homepage": "https://github.com/KinesisNetwork/node-manager#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^10.5.2",
+    "chalk": "^2.4.1",
+    "figlet": "^1.2.0",
+    "vorpal": "^1.12.0"
+  },
   "devDependencies": {
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
