--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     "target": "ESNext",
     "rootDir": "src",
     "baseUrl": "src",
+    "paths": {
+      "*": [
+        "*"
+      ]
+    },
     "types": [
       "node",
       "mocha",
