--- a/package.json
+++ b/package.json
@@ -40,8 +40,12 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^5.2.4",
+    "@types/nock": "^9.3.0",
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.2.0",
+    "nock": "^9.4.2"
   }
 }
