--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.2.0",
     "nock": "^9.4.2",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "sinon": "^6.1.3"
   }
 }
